--- a/index.html
+++ b/index.html
@@ -38,17 +38,8 @@
                         <input type="email" id="email" name="email" placeholder="Email Address" required><br>
                         <label for="password">Password:</label><br>
                         <input type="password" id="password" name="password" placeholder="Password" required><br>
-                        <button id="suvsbtn">CLAIM YOUR FREE TRIAL</button><br>
+                        <br><button class="btn">CLAIM YOUR FREE TRIAL</button><br>
                     </form>
 
-                    <p class="small-text">
-                        By clicking the button you agree to our Terms and Service
-                    </p>
-                </div>
-            </div>
-
-
-        </main>
-
-    </body>
-</html>
+                    <p>
+                        <style clicking the button you agree to our terms and service </p> </div> </div> </main> </body> </html>
