--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
         <main>
 
             <div class="text">
-                <h1>Learn to code by watching others</h1>
-                <p>see how experience developers solve problems in real time.
+                <h1>Learn to code by
                     <br>
-                    Watching scripted tutorials is great, but understanding how developers think is invaluable
+                    watching others</h1>
+                <p class="content">see how experience developers solve problems in real time.
+                    <br>
+                    Watching scripted tutorials is great, but understanding how
+                    <br>
+                    think is invaluable
                 </p>
             </div>
 
