--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
                         <input type="password" id="password" name="password" placeholder="Password" required><br>
                         <br><button class="btn">CLAIM YOUR FREE TRIAL</button><br>
                     </form>
+                    <br>
+                    <p style="color: grey; font-size: small; font-family: Arial, Helvetica, sans-serif;">
+                        Clicking the button you agree to our
 
-                    <p>
-                        <style clicking the button you agree to our terms and service </p> </div> </div> </main> </body> </html>
+                        <a href="" style="color: red; font-family: Arial, Helvetica, sans-serif;">
+                            terms and service</a>
+                    </p>
+                </div>
+            </body>
+        </html>
+    </body>
+</html></div></main></body></html>
