--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <br>
                     Watching scripted tutorials is great, but understanding how
                     <br>
-                    think is invaluable
+                    developers think is invaluable
                 </p>
             </div>
 
