--- a/index.html
+++ b/index.html
@@ -12,47 +12,48 @@
     </head>
     <body>
         <main>
-
-            <div class="text">
-                <h1>Learn to code by
-                    <br>
-                    watching others</h1>
-                <p class="content">see how experience developers solve problems in real time.
-                    <br>
-                    Watching scripted tutorials is great, but understanding how
-                    <br>
-                    developers think is invaluable
-                </p>
-            </div>
-
-            <div class="container">
-                <div>
-                    <p class="try">
-                        <strong>
-                            Try it free 7 days</strong>
-                        then $20/mo thereafter</p>
-                </div>
-                <div class="form">
-                    <form action="">
-                        <label for="fname">First name:</label><br>
-                        <input type="text" id="fname" name="fname" placeholder="First Name" required>
-                        <label for="lname">Last name:</label><br>
-                        <input type="text" id="lname" name="lname" placeholder="Last Name" required><br>
-                        <label for="email">Email:</label><br>
-                        <input type="email" id="email" name="email" placeholder="Email Address" required><br>
-                        <label for="password">Password:</label><br>
-                        <input type="password" id="password" name="password" placeholder="Password" required><br>
-                        <br><button class="btn">CLAIM YOUR FREE TRIAL</button><br>
-                    </form>
-                    <br>
-                    <p style="color: grey; font-size: small; font-family: Arial, Helvetica, sans-serif;">
-                        Clicking the button you agree to our
-
-                        <a href="" style="color: red; font-family: Arial, Helvetica, sans-serif;">
-                            terms and service</a>
+            <div class="content">
+                <div class="text">
+                    <h1>Learn to code by
+                        <br>
+                        watching others</h1>
+                    <p class="content-text">see how experience developers solve problems in real time.
+                        <br>
+                        Watching scripted tutorials is great, but understanding how
+                        <br>
+                        developers think is invaluable
                     </p>
                 </div>
-            </body>
-        </html>
+
+                <div class="container">
+                    <div>
+                        <p class="try">
+                            <strong>
+                                Try it free 7 days</strong>
+                            then $20/mo thereafter</p>
+                    </div>
+                    <div class="form">
+                        <form action="">
+                            <label for="fname">First name:</label><br>
+                            <input type="text" id="fname" name="fname" placeholder="First Name" required>
+                            <label for="lname">Last name:</label><br>
+                            <input type="text" id="lname" name="lname" placeholder="Last Name" required><br>
+                            <label for="email">Email:</label><br>
+                            <input type="email" id="email" name="email" placeholder="Email Address" required><br>
+                            <label for="password">Password:</label><br>
+                            <input type="password" id="password" name="password" placeholder="Password" required><br>
+                            <br><button class="btn">CLAIM YOUR FREE TRIAL</button><br>
+                        </form>
+                        <br>
+                        <p style="color: grey; font-size: small; font-family: Arial, Helvetica, sans-serif;">
+                            Clicking the button you agree to our
+
+                            <a href="" style="color: red; font-family: Arial, Helvetica, sans-serif;">
+                                terms and service</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
-</html></div></main></body></html>
+</html>
